src/atoms/button/index.module.scss
@import '@styles/variables.scss';
@import '@styles/mixins.scss';

.container {
  @include resetButton();
  font-family: var(--text-font);

  word-break: normal;

  &.fit {
    display: contents;
  }

  &.disabled,
  &:disabled {
    pointer-events: none;
    cursor: unset;
    opacity: 0.5;
  }

  &.full {
    width: 100%;

    @include respond-to('desktop') {
      width: fit-content;
    }
  }
}

.primary {
  color: var(--text-color);
  transition: color #{$theme-duration} ease-out;

  &.selected {
    font-weight: bold;
    margin-bottom: -7px;
    border-bottom: 1px solid var(--text-color);
  }

  @include hover {
    &.menu {
      margin-bottom: -1px;
      border-bottom: 1px solid var(--text-color);
      padding: 6px 0;

      text-decoration: none;
    }
  }
}

.secondary {
  color: var(--text-color);
  transition: color #{$theme-duration} ease-out;

  @include hover {
    text-decoration: none;
  }
}

.box {
  width: 100%;
  padding: 4px 16px;
  color: var(--gray-100);
  background-color: var(--gray-5);
  border-right: 2px solid var(--gray-100);
  border-bottom: 2px solid var(--gray-100);
  transition: border-color #{$theme-duration} ease-out,
    color #{$theme-duration} ease-out;
  min-width: 220px;
  text-justify: center;
  text-align: center;
}

.box:hover {
  border-right: 2px solid var(--gray-50);
  border-bottom: 2px solid var(--gray-50);
}

:root[data-theme='dark'] {
  .box {
    color: var(--gray-80);
    background-color: var(--gray-15);
    border-right: 2px solid var(--gray-80);
    border-bottom: 2px solid var(--gray-80);
  }

  .box:hover {
    border-right: 2px solid var(--gray-50);
    border-bottom: 2px solid var(--gray-50);
  }
}

.shadow_box {
  opacity: inherit;
  cursor: pointer;

  padding: 4px 16px;

  width: 100%;
  color: var(--text-color);
  background-color: var(--gray-15);
  border-right: 2px solid var(--text-color);
  border-bottom: 2px solid var(--text-color);
  transition: border-color #{$theme-duration} ease-out,
    color #{$theme-duration} ease-out;
}

.primary__purchase {
  width: calc(100vw - 2em);

  margin: 1em 0;

  @include respond-to('desktop') {
    width: auto;
    margin: 0;
  }
}

.left {
  text-align: left;
}

.button_theme {
  display: flex;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: var(--background-color);
  transition: var(--body-transition);
  z-index: 200;
  cursor: pointer;
}

